KFSPTS-25319 add more chnages to extensions